--- a/WeatherGift/Info.plist
+++ b/WeatherGift/Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Can I use your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Can I use your location</string>
 </dict>
 </plist>
